--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -19,15 +19,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: ; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.search{
+  
+  padding: 3rem;
+  border-radius: 1rem;
+  background-color: rgb(36, 54, 101);
+}
+label{
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+  
+}
+input{
+  border-radius: .3rem;
+}
+input:focus{
+  outline: none;
 }
 
+
+/* .App-link {
+  color: #61dafb;
+} */
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +54,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
